--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,73 @@
-# Packages #
-############
-*.gz
-*.rar
-*.tar
-*.zip
+# C++ objects and libs
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
 
-# Directories #
-###############
-BUILD/
-BUILDROOT/
-RPMS/
-SOURCES/
-SRPMS/
-tmp/
+# Qt-es
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*build-*
+
+# QtCreator
+*.autosave
+
+# QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
+
+# QtCtreator CMake
+CMakeLists.txt.user
+
+
+# kdevelop
+apidocs
+.kdev4
+build
+*~
+*.kdev4
+*.bak
+*.orig
+*.rej
+doxygen.log
+Doxyfile
+*.kdevelop
+*.kdevelop.filelist
+*.kdevelop.pcs
+*.kdevses
+.*kate-swp
+build/
+mem.log.*
+massif.*
+callgrind.*
+perf.data*
+
+# from kdiff3
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+
+# visual studio code
+*.vscode/
+
+# RPM Directories
+BUILD/*
+BUILDROOT/*
+RPMS/*
+SRPMS/*
+tmp/*
